[project]
name = "logger_tt"
version = "1.7.4"
description = "Make logging simple, log even exception that you forgot to catch. Make multiprocessing logging becomes a breeze"
readme = "README.md"
requires-python = ">=3.6"
authors = [{name = "Nguyen Ba Duc Tin", email = "nguyenbaduc.tin@gmail.com"}]
license = "MIT"
keywords = ["logging", "logger", "debugger", "multiprocessing"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: System :: Hardware :: Symmetric Multi-processing",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "logger_tt/*.py",
    "logger_tt/*.pyi",
    "logger_tt/log_config*",
    "tests/",
]

[project.urls]
Homepage = "https://github.com/Dragon2fly/logger_tt"

[project.optional-dependencies]
test = ["pytest"]
